<resources>
    <string name="app_name">Cringe Health</string>
    <string name="APP_PREFERENCES">mysettings</string>
    <string name="APP_PREFERENCES_STEPS">steps</string>

    <plurals name="exercises">
        <item quantity="one">%1$d упражнение</item>
        <item quantity="other">%1$d упражнения</item>
    </plurals>

    <plurals name="priemsPishi">
        <item quantity="one">%1$d прием пищи</item>
        <item quantity="other">%1$d приема пищи</item>
    </plurals>
    <string name="EditInformation">Редактировать информацию</string>
    <string name="Height">Рост, см:</string>
    <string name="DNM">Выберите дневную норму шагов</string>
    <string name="Weight">Вес, кг:</string>
    <string name="DesiredWeight">Желаемый вес, кг:</string>
    <string name="Achievments">Достижения</string>
    <string name="Progress">Прогресс</string>
    <string name="EditHeight">Редактировать рост</string>
    <string name="EditWeight">Редактировать вес</string>
    <string name="EditDesiredWeight">Редактировать желаемый вес</string>
    <string name="EditName">Редактировать имя</string>
    <string name="Back">Назад</string>
    <string name="Accept">Принять</string>
    <string name="Name">Имя</string>
    <string name="Surname">Фамилия</string>
</resources>