<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/desired_weight_editing_tv"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/DesiredWeight"
        android:textSize="20sp"
        tools:ignore="MissingConstraints"
        android:gravity="center"/>
    <NumberPicker
        android:layout_marginStart="50dp"
        app:layout_constraintTop_toBottomOf="@+id/desired_weight_editing_tv"
        android:id="@+id/desired_weight_np1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        app:layout_constraintStart_toStartOf="@id/desired_weight_editing_tv"/>

    <TextView
        android:id="@+id/desired_weight_editing_dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="."
        app:flow_verticalAlign="center"
        app:layout_constraintBottom_toBottomOf="@+id/desired_weight_np1"
        app:layout_constraintStart_toEndOf="@+id/desired_weight_np1"
        app:layout_constraintTop_toTopOf="@+id/desired_weight_np1" />
    <NumberPicker
        app:layout_constraintTop_toBottomOf="@+id/desired_weight_editing_tv"
        android:id="@+id/desired_weight_np2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        app:layout_constraintStart_toEndOf="@id/desired_weight_editing_dot"/>

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/desired_weight_np1"
        android:layout_marginTop="10dp"
        android:text="@string/Back"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="MissingConstraints" />
    <Button
        android:id="@+id/accept_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/desired_weight_np1"
        android:layout_marginTop="10dp"
        android:text="@string/Accept"
        app:layout_constraintRight_toRightOf="@id/desired_weight_editing_tv"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>